created input and button

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>My fibonacci</title>
 </head>
 <body>
+    <input id="input" type="number" placeholder="input for fibonacci"><button id="button" type="submit">Submit</button>
     <script src="index.js"></script>
 </body>
 </html>
